--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vituum/vite-plugin-posthtml": "^1.1.0",
+    "posthtml-extend": "^0.6.5",
+    "posthtml-include": "^2.0.1",
     "vite": "^5.0.0",
     "vite-plugin-html-inject": "^1.1.2",
     "vite-plugin-static-copy": "^3.1.4"
