--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "devDependencies": {
     "@vituum/vite-plugin-posthtml": "^1.1.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "posthtml-extend": "^0.6.5",
     "posthtml-include": "^2.0.1",
+    "tailwindcss": "3",
     "vite": "^5.0.0",
     "vite-plugin-html-inject": "^1.1.2",
     "vite-plugin-static-copy": "^3.1.4"
+  },
+  "dependencies": {
+    "astro": "^5.16.11"
   }
 }
