--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "postcss": "^8.5.6",
     "posthtml-extend": "^0.6.5",
     "posthtml-include": "^2.0.1",
-    "tailwindcss": "3",
-    "vite": "^5.0.0",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1",
     "vite-plugin-html-inject": "^1.1.2",
     "vite-plugin-static-copy": "^3.1.4"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.11"
   }
 }
